Fix up the CSS on the scrollbar.

--- a/webapp/style.css
+++ b/webapp/style.css
@@ -346,8 +346,9 @@ div > .selection-departed { border-color: var(--msg-selected-color);  }
   height: 228px;
 }
 
-#listing::-webkit-scrollbar-track { background-color: black; }
-#listing::-webkit-scrollbar-thumb { background-color: #666; }
+#listing::-webkit-scrollbar { width: 6px; }
+#listing::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px black; }
+#listing::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px #666; }
 
 #content.full-screen > #minibar { display: flex; }
 #content.part-screen > #minibar { display: none; }
